<resources>
    <string name="app_name">SportApp</string>
    <string name="password_label">Password</string>
    <string name="user_label">Usuario</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">SportApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_general_data">Datos Generales</string>
    <string name="menu_sport_profile">Perfil Deportivo</string>
    <string name="menu_food_profile">Perfil Alimenticio</string>
    <string name="menu_demographic_profile">Perfil Demografico</string>
    <string name="title_label">Ingresa a tu portal deportivo</string>
    <string name="contrase_label">Contraseña</string>
    <string name="login_label">Continuar</string>
    <string name="plincipal_data_title">Datos Principales</string>
    <string name="menu_services">Servicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servicios_label">Servicios disponibles</string>
    <string name="servicios_contratados_label">Servicios contratados</string>
    <string name="names_label">Nombres</string>
    <string name="last_name_label">Apellidos</string>
    <string name="identification_type_label">Tipo de identificacion</string>
    <string name="identification_number_label">Numero de identificacion</string>
    <string name="secundary_tittle">Datos Segundarios</string>
    <string name="gender_label">Genero</string>
    <string name="weight_label">Peso</string>
    <string name="age_label">Edad</string>
    <string name="height_label">Altura</string>
    <string name="menu_events">Eventos</string>
    <string name="menu_products">Productos</string>
    <string name="available_events">Eventos disponibles</string>
    <string name="logged_events">Eventos registrados</string>
    <string name="products_available">Productos disponibles</string>
    <string name="purchased_products">Productos adquiridos</string>
</resources>