<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_services_general"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events_general"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products_general"
            android:title="@string/menu_products" />
    </group>
</menu>