<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TitleGeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/plincipal_data_title"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:layout_margin="32dp"
            android:background="@drawable/title_rounded"/>

        <TextView
            android:id="@+id/genUsernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/genUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/names_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/genName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genLastnameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/last_name_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/genLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genTypeIdenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/identification_type_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/genTypeIden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genNumIdenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/identification_number_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/genNumIden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/TitleSecondData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/secundary_tittle"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:layout_margin="32dp"
            android:background="@drawable/title_rounded"/>

        <TextView
            android:id="@+id/genGenLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/genGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genWeightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/weight_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/genWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genHeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/height_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/genHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>

        <TextView
            android:id="@+id/genAgeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/genAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_rounded"/>


    </LinearLayout>
</ScrollView>